[package]
name = "foam-up"
version = "1.0.0"
authors = ["Jan Schulte <jan@work-with-jan.com>"]
edition = "2018"
description = "CLI to quickly create new projects for Foam"
license = "MIT"
homepage = "https://github.com/schultyy/foam-up"
repository = "https://github.com/schultyy/foam-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"